# iracing-api-rs

./: .gitignore  Cargo.toml  LICENSE.md  README.md
examples/: car_assets.rs
src/: auth.rs  client.rs  lib.rs  main.rs
src/model/: auth.rs  car.rs  mod.rs  results.rs  season_results.rs
test_files/auth/: success.json
