[package]
name = "iracing-api"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
eyre = "0.6.5"
reqwest = { version = "0.11.8", features = ["cookies", "json"] }
serde = { version = "1.0.133", features = ["derive"] }
serde_json = "1.0.74"
serde_repr = "0.1.7"
thiserror = "1.0.30"

[dev-dependencies]
color-eyre = "0.5.11"
dotenv = "0.15.0"
tokio = { version = "1.15.0", features = ["full"] }
